--- a/tema_undangan/tema_2/style.css
+++ b/tema_undangan/tema_2/style.css
@@ -78,6 +78,12 @@
   background-color: rgba(91,87,78,0.61) !important;
 height: 263vh;
 }
+
+.bg-page11{
+  background-color: #72706a;
+  height: 60vh;
+}
+
   
 
   .pasangan{
@@ -102,8 +108,96 @@ height: 263vh;
   
 }
 
-/* Desktop */
-@media screen and (min-width: 501px){
+/* Desktop  720p*/
+@media screen and (min-width: 1280px){
+  .overflowAuto {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 20vh;
+    width: 100%;
+  }
+  
+  .bg-page1{
+    height: 100vh;
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+    /* animation: 1s ease-out 0s 1 slideInFromTop; */
+  }
+
+  .bg-page2{
+    background-image: url('https://cdn.undanganweb.com/hi/2022/03/IMG_5871.png');
+    height: 80vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .bg-page3{
+    background-color: #9b9893;
+    height: 150vh;
+    margin-top: -20vh;
+    border-radius: 90%/100px 100px 0 0;
+  }
+
+  .bg-page4{
+    height: 150vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .bg-page5{
+    height: 200vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  
+.bg-page6{
+  background-image: url('https://cdn.undanganweb.com/hi/2022/03/IMG_5871.png');
+  height: 150vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.bg-page7{
+  background-color: rgba(91,87,78,0.61) !important;
+height: 300vh;
+}
+
+.bg-page11{
+  background-color: #72706a;
+  height: 80vh;
+}
+
+
+  .pasangan{
+    font-family: 'Island Moments', cursive;
+    font-size: 80px;
+  }
+
+  .mempelai{
+  font-family: 'Island Moments', cursive;
+  font-size: 80px;
+}
+
+.mempelai2{
+  font-family: 'Island Moments', cursive;
+  font-size: 50px;
+}
+
+.menuju{
+  font-family: 'Island Moments', cursive;
+  font-size: 40px;
+}
+  
+}
+
+/* Desktop  HD*/
+@media screen and (min-width: 1440px){
   .overflowAuto {
     overflow-y: scroll;
     overflow-x: hidden;
@@ -161,6 +255,12 @@ height: 263vh;
   background-color: rgba(91,87,78,0.61) !important;
 height: 215vh;
 }
+
+.bg-page11{
+  background-color: #72706a;
+  height: 50vh;
+}
+
 
   .pasangan{
     font-family: 'Island Moments', cursive;
@@ -223,10 +323,6 @@ height: 215vh;
   margin-top: -100vh;
 }
 
-.bg-page11{
-  background-color: #72706a;
-  height: 50vh;
-}
 
 .text-indent{
   word-spacing: 5px;
